tests/baselines/reference/classIndexer5.errors.txt
classIndexer5.ts(4,5): error TS2564: Property '#a' has no initializer and is not definitely assigned in the constructor.


==== classIndexer5.ts (1 errors) ====
    class Foo {
        [key: string]: number;
    
        #a: boolean;
        ~~
!!! error TS2564: Property '#a' has no initializer and is not definitely assigned in the constructor.
        #b = false;
    }
    